# Homework

./: cli.py  docker-compose.yml  index.html  makefile  pyproject.toml  readme.md  script.js
alembic/: env.py
app/: app.py  config.py  db.py  exceptions.py  logger.py  main.py  settings.toml
app/api/: companies_api.py  mics_api.py  payments_api.py  routes.py
app/models/: companies_model.py  payments_model.py
app/repositories/: base_repo.py  company_repo.py
app/schemas/: misc_schemas.py
app/services/: company_service.py
