[tool.poetry]
name = "pay-service-v2"
version = "0.1.0"
description = ""
authors = ["Ivan <ceo@ivan-victorovich.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
ruff = "^0.7.3"
mypy = "^1.13.0"
dynaconf = "^3.2.6"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
typer = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
